--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Home</title>
+    <title>Dokpo</title>
 {% endblock %}
 {% block body %}
      <div class="container">
         <div class="row">
             <div class="payment-col col-lg-4">
-                <p>Core</p>
+
             </div>
         </div>
      </div>
