small url changes

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -13,6 +13,9 @@
             <input type="submit" value="{{ title }}" class="btn btn-default">
         </form>
     </div>
+    <div class="col-sm-6 col-sm-offset-3" style="margin-top: 10px;">
+        <a href="{% url 'accounts:register' %}">Register</a>
+    </div>
 
 {% endblock body %}
 
