--- a/payments/templates/payments/create.html
+++ b/payments/templates/payments/create.html
@@ -1,51 +1,58 @@
 {% extends 'base.html' %}
+
 {% block head %}
     <title>Payment</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'payments/css/style.css' %}">
 {% endblock %}
 {% block body %}
-    <h2>Pay To:</h2>
-{#     <form action="#" method="post">#}
-{#        {% csrf_token %}#}
-{#         <div class="form-group">#}
-{##}
-{#         </div>#}
-{#        {{ pay_to_form.as_p }}#}
-{#        {{ payment_form.as_p }}#}
-{#        <input type="submit" value="Submit">#}
-{#     </form>#}
+     {% comment %}<form action="#" method="post" novalidate>
+        {% csrf_token %}
+         <div class="form-group">
+            {{ pay_to_form|crispy }}
+            {{ payment_form|crispy }}
+          </div>
+         <input type="submit" value="Submit">
+     </form>{% endcomment %}
 
-
-    <form class="form-horizontal" method="post">{% csrf_token %}
-    <fieldset>
-        <legend>{{ title }}</legend>
-        {% for field in form %}
-            {% if field.errors %}
-                <div class="control-group error">
-                    <label class="control-label">{{ field.label }}</label>
-                    <div class="controls">{{ field }}
-                        <span class="help-inline">
-                            {% for error in  field.errors %}{{ error }}{% endfor %}
-                        </span>
-                    </div>
-                </div>
-            {% else %}
-                <div class="control-group">
-                    <label class="control-label">{{ field.label }}</label>
-                    <div class="controls">{{ field }}
+    <div class="container">
+        <form class="form-horizontal" method="post" novalidate>
+         {% csrf_token %}
+        <fieldset>
+            <legend>{{ title }}</legend>
+            {% if form.subject.errors %}
+                <ol role="alertdialog">
+                    {% for error in form.subject.errors %}
+                    <li role="alert"><strong>{{ error|escape }}</strong></li>
+                    {% endfor %}
+                </ol>
+            {% endif %}
+            {% for field in pay_to_form %}
+                    <div class="form-group row">
+                            <label class="col-sm-2 col-form-label">{{ field.label }}</label>
+                            <div class="col-sm-10">
+                                {{ field }}
+                            </div>
+                            {% if field.help_text %}
+                                <p class="help-inline"><small>{{ field.help_text }}</small></p>
+                            {% endif %}
+                        </div>
+            {% endfor %}
+            {% for field in payment_form %}
+                <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-10">
+                            {{ field }}
+                        </div>
                         {% if field.help_text %}
                             <p class="help-inline"><small>{{ field.help_text }}</small></p>
                         {% endif %}
                     </div>
-                </div>
-            {% endif %}
-        {% endfor %}
-    </fieldset>
-    <div class="form-actions">
-        <button type="submit" class="btn btn-primary" >Submit</button>
+            {% endfor %}
+        </fieldset>
+        <div class="form-actions">
+            <button type="submit" class="btn btn-primary" >Submit</button>
+        </div>
+    </form>
     </div>
-</form>
-
-
 {% endblock %}
