--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Dokpo</title>
+    <title>{{ title }}</title>
 {% endblock %}
 {% block body %}
      <div class="container">
         <div class="row">
-            <div class="payment-col col-lg-4">
-
+            <div class="col-lg-4">
+                {{ Description }}
             </div>
         </div>
      </div>
