--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <div id="app" class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">{{ header }}</a>
+        <a class="navbar-brand" href="{% url "core:home" %}">{{ nav }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,10 @@
         <div id="navbarNavDropdown" class="navbar-collapse collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url "core:home" %}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url "payments:home" %}">Payments <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <ul class="navbar-nav">
