--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,6 +13,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url "payments:home" %}">Payments <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url "groups:home" %}">Groups <span class="sr-only">(current)</span></a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
