--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/navbar-top.css' %}">
-        <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         {% block head %}
         {% endblock %}
