--- a/templates/nav.html
+++ b/templates/nav.html
@@ -18,9 +18,21 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Welcome {{ user.first_name }}
+                            </a>
+                            <div class="dropdown-menu">
+                              <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Profile</a>
+                              <a class="dropdown-item" href="{% url 'accounts:logout' %}"><i class="fa fa-sign-out"></i>Logout</a>
+                            </div>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
