--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
 
 {% block head %}
         <title>Account</title>
@@ -15,6 +16,7 @@
     </div>
     <div class="col-sm-6 col-sm-offset-3" style="margin-top: 10px;">
         <a href="{% url 'accounts:register' %}">Register</a>
+        <a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook OAuth2</a>
     </div>
 
 {% endblock body %}
