--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,3 @@
-{% load socialaccount %}
 <div id="app" class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{% url "core:home" %}">{{ nav }}</a>
@@ -26,13 +25,12 @@
                             </a>
                             <div class="dropdown-menu">
                               <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Profile</a>
-{#                              <a class="dropdown-item" href="{% url 'accounts:logout' %}"><i class="fa fa-sign-out"></i>Logout</a>#}
+                              <a class="dropdown-item" href="{% url 'accounts:logout' %}"><i class="fa fa-sign-out"></i>Logout</a>
                             </div>
                         </li>
                     {% else %}
                         <li class="nav-item">
-{#                            <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>#}
-                              <a class="nav-link" href="{% provider_login_url "facebook" method="oauth2" %}">Facebook OAuth2</a>
+                            <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
                         </li>
                     {% endif %}
                 </ul>
