change to dhokpo

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         {% endblock %}
     </head>
     <body>
-        {% include 'nav.html' with nav='Dhrogpo'%}
+        {% include 'nav.html' with nav='Dhokpo'%}
         <div class="main-container">
             {% block body %}
             {% endblock %}
