--- a/groups/templates/groups/index.html
+++ b/groups/templates/groups/index.html
@@ -15,9 +15,9 @@
                 <h2>{{ group.name  }} </h2>
                 <p>{{ group.details }}</p>
                 {% if group.payment_id %}
-                    <a href="{% url 'payments:group' id=group.id %}">Show all payments</a>
+                    <a href="{% url 'payments:group' pk=group.id %}">Show all payments</a>
                 {% else %}
-                    <a href="{% url 'payments:create' %}">Add New Payment</a>
+                    <a href="{% url 'payments:create' group_id=group.id %}">Create Payment</a>
                 {% endif %}
             </div>
         {% endfor %}
