--- a/payments/templates/payments/create.html
+++ b/payments/templates/payments/create.html
@@ -12,6 +12,7 @@
          {% csrf_token %}
         <fieldset>
             <legend>{{ title }}:</legend>
+            <h3>{{ group.name  }}</h3>
             {% if form.subject.errors %}
                 <ol role="alertdialog">
                     {% for error in form.subject.errors %}
@@ -19,19 +20,6 @@
                     {% endfor %}
                 </ol>
             {% endif %}
-            {% for field in extra_form %}
-               <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">{{ field.label }}</label>
-                        <div class="col-sm-10">
-                            {{ field }}
-                        </div>
-                        {% if field.help_text %}
-                            <p class="help-inline">
-                                <small>{{ field.help_text }}</small>
-                            </p>
-                        {% endif %}
-                    </div>
-            {% endfor %}
             {% for field in payment_form %}
                 <div class="form-group row">
                         <label class="col-sm-2 col-form-label">{{ field.label }}</label>
