--- a/payments/templates/payments/create.html
+++ b/payments/templates/payments/create.html
@@ -20,7 +20,7 @@
                     {% endfor %}
                 </ol>
             {% endif %}
-            {% for field in payment_form %}
+            {% for field in form %}
                 <div class="form-group row">
                         <label class="col-sm-2 col-form-label">{{ field.label }}</label>
                         <div class="col-sm-10">
