--- a/groups/templates/groups/detail.html
+++ b/groups/templates/groups/detail.html
@@ -10,7 +10,7 @@
 {% block body %}
  <div class="container">
     <div class="groups">
-        {{ description }}
+        {{ group.name }}
     </div>
  </div>
 {% endblock %}
