--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -1,1 +1,15 @@
-<h2>You are logged out</h2>
+{% extends user.is_authenticated|yesno:"admin_base.html,public_base.html" %}
+
+{% block head %}
+        <title>Account</title>
+{% endblock %}
+
+{% block body %}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <h2>You are logged out</h2>
+            </div>
+        </div>
+     </div>
+{% endblock body %}
