--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,4 +1,4 @@
-{% extends 'public_base.html' %}
+{% extends user.is_authenticated|yesno:"admin_base.html,public_base.html" %}
 {% load socialaccount %}
 
 {% block head %}
