--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,4 +1,4 @@
-{% extends 'public_base.html' %}
+{% extends user.is_authenticated|yesno:"admin_base.html,public_base.html" %}
 
 {% block head %}
         <title>Account</title>
