--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,14 +1,5 @@
-{% extends 'public_base.html' %}
+{% extends user.is_authenticated|yesno:"admin_base.html,public_base.html" %}
 
 {% block head %}
     <title>{{ title }}</title>
-{% endblock %}
-{% block body %}
-     <div class="container">
-        <div class="row">
-            <div class="col-lg-4">
-                {{ Description }}
-            </div>
-        </div>
-     </div>
 {% endblock %}
