--- a/templates/public.html
+++ b/templates/public.html
@@ -1,7 +1,26 @@
-<div class="container">
-        <div class="row">
-            <div class="col-lg-4">
-                Public Template
-            </div>
+<main role="main" class="container" style="margin-top:20px;">
+
+  <div class="row">
+    <div class="col-md-8 mb-4">
+      <h2 class="display-3">Welome</h2>
+      <p>
+        This website keeps track of friend's payments are tracked and status. Emails are sent every payment for record. More features coming.
+      </p>
+    </div>
+  </div>
+  <div class="row">
+        <div class="col">
+          <div class="jumbotron">
+            <p class="lead">Keep track of payments.</p>
+            <a class="btn btn-lg btn-primary" href="#" role="button">Get Started &raquo;</a>
+          </div>
         </div>
-</div>
+  </div>
+</main>
+<footer class="container mt-4">
+  <div class="row">
+    <div class="col">
+      <p class="text-center">Dokpo <a href="#">Burp</a></p>
+    </div>
+  </div>
+</footer>
