--- a/templates/public.html
+++ b/templates/public.html
@@ -2,25 +2,44 @@
 
   <div class="row">
     <div class="col-md-8 mb-4">
-      <h2 class="display-3">Welome</h2>
-      <p>
-        This website keeps track of friend's payments are tracked and status. Emails are sent every payment for record. More features coming.
-      </p>
+      <h1 class="display-4">Welcome</h1>
     </div>
   </div>
   <div class="row">
         <div class="col">
           <div class="jumbotron">
-            <p class="lead">Keep track of payments.</p>
+            <p class="lead">An Overview of the website.</p>
             <a class="btn btn-lg btn-primary" href="#" role="button">Get Started &raquo;</a>
           </div>
         </div>
+  </div>
+  <div class="row" id="about">
+    <div class="col-sm-4">
+        <h3 class="m-b-2">About</h3>
+        <img class="m-b-1 img-fluid img-rounded hidden-xs-down" src="https://www.thelandofsnows.com/wp-content/uploads/2018/05/Morning-Potala-1024x686-1525992734.jpg" alt="PortLand" />
+        <p>The beautiful city of Lhasa, Tibet</p>
+        <p>Explore Dhokpo for free and leave any comments for improvements.</p>
+    </div>
+    <div class="col-sm-4">
+        <h3 class="m-b-2">Detail</h3>
+        <p>Dhokpo was created so that you and your friends can keep track of all your payments during trips or dinner!</p>
+        <p>Dhokpo in Tibetan means "Friend".</p>
+        <p>You can login and receive emails on each transaction and action.
+                This website keeps track of friend's payments are tracked and status. Emails are sent every payment for record. More features coming.</p>
+    </div>
+    <div class="col-sm-4">
+        <h3 class="m-b-2">What You can Do</h3>
+          <div class="list-group">
+            <p class="list-group-item text-primary"><strong>Check Payments</strong>: Payments</p>
+            <p class="list-group-item text-primary"><strong>Add Group</strong>: Groups</p>
+          </div>
+    </div>
   </div>
 </main>
 <footer class="container mt-4">
   <div class="row">
     <div class="col">
-      <p class="text-center">Dokpo <a href="#">Burp</a></p>
+      <p class="text-center">© Dhokpo 2018 <a href="#">Burp</a></p>
     </div>
   </div>
 </footer>
