--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -16,7 +16,7 @@
     </div>
     <div class="col-sm-6 col-sm-offset-3" style="margin-top: 10px;">
         <a href="{% url 'accounts:register' %}">Register</a>
-        <a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook OAuth2</a>
+        <a href="{% provider_login_url "facebook" method="oauth2" %}" style="display:block;">Login with Facebook</a>
     </div>
 
 {% endblock body %}
