--- a/templates/public.html
+++ b/templates/public.html
@@ -18,7 +18,7 @@
         <h3 class="m-b-2">About</h3>
         <img class="m-b-1 img-fluid img-rounded hidden-xs-down" src="https://www.thelandofsnows.com/wp-content/uploads/2018/05/Morning-Potala-1024x686-1525992734.jpg" alt="PortLand" />
         <p>The beautiful city of Lhasa, Tibet</p>
-        <p>Explore Dhokpo for free and leave any comments for improvements.</p>
+        <p>Explore Dhokpo for free and leave any <a href="#">comments</a> for improvements.</p>
     </div>
     <div class="col-sm-4">
         <h3 class="m-b-2">Detail</h3>
